--- a/public/web/css/app.css
+++ b/public/web/css/app.css
@@ -10948,18 +10948,18 @@ h1 {
   transition: 0.3s ease-in-out;
 }
 
-.animation-s1 .full-width-banner .banner-image:hover img {
-  transform: scale(1.2);
-}
+/*.animation-s1 .full-width-banner .banner-image:hover img {*/
+/*  transform: scale(1.2);*/
+/*}*/
 
 .animation-s1 .full-screen-banner .banner-image img {
   transform: scale(1);
   transition: 0.3s ease-in-out;
 }
 
-.animation-s1 .full-screen-banner .banner-image:hover img {
-  transform: scale(1.2);
-}
+/*.animation-s1 .full-screen-banner .banner-image:hover img {*/
+/*  transform: scale(1.2);*/
+/*}*/
 
 .animation-s1 .cat-thumb {
   overflow: hidden;
@@ -11901,7 +11901,7 @@ h1 {
 }
 
 .product-2x article .buttons .btn {
-  width: 110px;
+  width: 123px;
 }
 
 .product {
@@ -11975,7 +11975,7 @@ h1 {
 }
 
 .product article .thumb {
-  height: 205px;
+  /*height: 205px;*/
   overflow: hidden;
   text-align: center;
   display: flex;
@@ -11993,7 +11993,7 @@ h1 {
 
 
 .product article .discount-tag {
-  background-color: #f89e20;
+  background-color: #1A1A1A;
   right: 0;
   left: auto;
   font-size: 0.8125rem;
@@ -13544,7 +13544,7 @@ h1 {
 }
 
 .header-two .header-maxi .top-right-list .cart-header .shopping-cart .shopping-cart-items li .item-thumb .icon {
-  border: 1px solid #fff;
+  /*border: 1px solid #fff;*/
   background-color: #dc3545;
   display: flex;
   align-items: center;
@@ -19057,8 +19057,8 @@ body[dir=rtl] .header-mobile .header-navbar .form-inline .search .btn-secondary 
 
 .footer-one {
   padding-top: 45px;
-  background-color: #fff;
-  color: #212529;
+  background-color: #000000;
+  color: #ffffff;
 }
 
 .footer-one .single-footer h5 {
@@ -19111,7 +19111,7 @@ body[dir=rtl] .header-mobile .header-navbar .form-inline .search .btn-secondary 
 }
 
 .footer-one .single-footer .contact-list li a {
-  color: #212529;
+  color: #ffffff;
 }
 
 .footer-one .single-footer .links-list li {
@@ -19122,7 +19122,7 @@ body[dir=rtl] .header-mobile .header-navbar .form-inline .search .btn-secondary 
 .footer-one .single-footer .links-list li a {
   display: block;
   font-size: 0.875rem;
-  color: #212529;
+  color: #ffffff;
 }
 
 .footer-one .single-footer .links-list li a:hover {
@@ -19259,7 +19259,7 @@ body[dir=rtl] .header-mobile .header-navbar .form-inline .search .btn-secondary 
 }
 
 .footer-one .copyright-content .footer-image .img-fluid {
-  height: 20px;
+  height: 50px;
 }
 
 .footer-one .copyright-content .footer-info {
