--- a/public/web/css/app.css
+++ b/public/web/css/app.css
@@ -11584,12 +11584,13 @@ h1 {
   border: 1px solid #dee2e6 !important;
   border-radius: 0;
   margin-left: 1px;
-  height: 38px;
+  height: 42px;
   width: 38px;
   text-align: center;
   line-height: 38px;
   text-decoration: none;
   outline: none;
+  margin-top: -14px !important;
 }
 
 .products-area .owl-nav button:hover {
@@ -11908,7 +11909,7 @@ h1 {
   margin-bottom: 30px;
 }
 /* *************************************************************************  */
-   
+
    .product article .tag {
   font-size: 0.8125rem;
   color: #adb5bd;
@@ -11923,7 +11924,7 @@ h1 {
      .product article .tag.ok1 {
          display:none !important;
      }
-     
+
     .product article .title {
   display: flex;
   justify-content: center;
@@ -11936,9 +11937,9 @@ h1 {
   line-height: 20px;
   text-decoration: none;
   padding: 0;
-} 
- 
-    
+}
+
+
     .product article .price {
   display: flex;
   justify-content: center;
@@ -11954,7 +11955,7 @@ h1 {
   text-decoration: line-through;
   margin-left: 10px;
 }
-    
+
     .product article .product-hover .icons .icon{
         color: #f89e20;
         border: 0px;
@@ -11964,7 +11965,7 @@ h1 {
         -webkit-box-shadow: 1px 1px 6px -1px rgba(20,20,20,0.1);
 
     }
-/* *************************************************************************  */    
+/* *************************************************************************  */
 .product article {
   display: inline-block;
   background-color: #fff;
